<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="5dp">

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_margin="5dp"
        android:background="@drawable/screenhot_top_btn_bg"
        android:text="@string/screenhot_return"
        />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_margin="5dp"
        android:background="@drawable/screenhot_top_btn_bg"
        android:text="@string/screenhot_save"
        android:textColor="@color/screenhot_gary"
        />

    <Button
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_margin="5dp"
        android:layout_toLeftOf="@id/save"
        android:background="@drawable/screenhot_top_btn_bg"
        android:text="@string/screenhot_share"
        />
</RelativeLayout>